# PhoenixML

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  monitor.yml  promote.yml  serve.yml  train.yml
conf/: config.yaml
docker/: serve.Dockerfile  train.Dockerfile
src/phoenixml/: __init__.py  api.py  config.py  data.py  drift.py  monitor.py  notify.py  promote.py  simulate_drift.py  train.py
tests/: test_api.py  test_data.py  test_monitor.py  test_promote.py  test_train.py
